--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -1,24 +1,32 @@
 .nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
-  background-color: #a45d97;
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.0);
+  border-bottom: 1px solid white;
+  box-shadow: 0 2px 4px rgba(150, 150, 150, 0.3);
 }
 
 .title {
-  font-size: 24px;
+  font-size: 26px;
   font-weight: bold;
   color: white;
 }
 
-.links a {
-  margin-left: 16px;
-  text-decoration: none;
-  color: white;
-  font-weight: 500;
+.links a { 
+  padding: 0 16px;
+  font-size: 16px;
 }
 
-.links a:hover {
-  color: #ffd6e0;
+.logo { 
+  margin-left: 20px;
+  width: 30px;
+  height: 30px;
 }
