--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  /* makes nav always on top */
   z-index: 999;
   
   display: flex;
@@ -29,4 +30,20 @@
   margin-left: 20px;
   width: 30px;
   height: 30px;
+}
+
+.links a:hover { 
+  color: #a594f9;
+} 
+
+.links a.contact { 
+  background-color: #e2dcfd;
+  text-decoration: none; 
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+}
+
+.links a.contact:hover { 
+  background-color: #a594f9;
+  color:#e2dcfd; 
 }
