--- a/components/styles/Footer.module.css
+++ b/components/styles/Footer.module.css
@@ -5,6 +5,7 @@
     width: 100%;
     text-align: center;
     padding: 50px;
+    color: black;
 }
 
 .socials { 
@@ -17,7 +18,7 @@
 }
 
 .socials a { 
-    padding: 0 10px;
+    padding: 20px;
     margin-left: 15px;
 }
 
