--- a/components/styles/Hero.module.css
+++ b/components/styles/Hero.module.css
@@ -26,7 +26,7 @@
 .intro {
   text-transform: uppercase;
   font-size: 14px;
-  color: #666;
+  color: black;
   margin-bottom: 8px;
 }
 
@@ -36,6 +36,7 @@
   line-height: 1.3;
   font-family: monospace;
   margin: 0 0 16px;
+  color: black;
 }
 
 .description {
@@ -97,5 +98,5 @@
 }
 
 .primary:hover, .secondary:hover {
-  background-color: #e2dcfd;
+  background: #f5efff;
 }
