--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,7 @@
 .page { 
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   background-image: linear-gradient( 
     to right,
     white, 
