--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,14 +2,14 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  background-image: linear-gradient( 
-    to right,
-    white, 
-    #f5efff 400px,
-    white 800px
+  background-image: radial-gradient(
+    circle at center, 
+    #f5efff 0%,
+    #f5efff 50%,
+    white 70%
   );
-  background-size: 100% 100%;
-  background-position: 50% 100%;
+
+  background-size: cover;
   background-repeat: no-repeat;
 
   min-height: 100vh;
