feat(projects): added more projects and fixed bugs

--- a/components/styles/Experience.module.css
+++ b/components/styles/Experience.module.css
@@ -8,7 +8,7 @@
 .filterButton {
   padding: 0.5rem 1.25rem;
   background-color: #a594f9;
-  color: #000;
+  color: black;
   border: 2px solid #000;
   border-radius: 20px;
   cursor: pointer;
@@ -20,6 +20,6 @@
 }
 
 .active {
-  background-color: #f5efff;
+  background-color: #a594f9;
   border-color: black;
 }
